Refactor into sub-modules and add tests.